@@ -8,7 +8,7 @@
 <configuremap>
   <configure name="NAME" value="ImageMagick"/>
   <configure name="LIB_VERSION" value="0x657"/>
-  <configure name="LIB_VERSION_NUMBER" value="6,5,7,3"/>
+  <configure name="LIB_VERSION_NUMBER" value="6,5,7,2"/>
   <configure name="RELEASE_DATE" value="2009-10-26"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
