@@ -12,7 +12,7 @@ PACKAGE_NAME='ImageMagick'
 # PACKAGE_NAME (e.g. "1.0.0").
 PACKAGE_VERSION='6.5.7'
 PACKAGE_LIB_VERSION="0x657"
-PACKAGE_RELEASE="3"
+PACKAGE_RELEASE="2"
 PACKAGE_LIB_VERSION_NUMBER="6,5,7,${PACKAGE_RELEASE}"
 PACKAGE_RELEASE_DATE=`date +%F`
 PACKAGE_STRING="$PACKAGE_NAME $PACKAGE_VERSION"
